<resources>
    <string name="app_name">CryptoScan</string>

    <!--NAVIGATION-->
    <string name="home">Home</string>
    <string name="features">Features</string>

    <!--BASE PARAMS-->
    <string name="price_usdt">Price USDT</string>
    <string name="price_btc">Price BTC</string>
    <string name="ethereum_supply">Total supply</string>
    <string name="ethereum_nodes">Total nodes</string>
    <string name="default_base_params">--/--</string>
    <string name="eth">ETH</string>

    <!--LIST FEATURES-->
    <string name="transfer_usdt_from_binance">Transfer USDT from Binance</string>
    <string name="transfer_moonbird_nft">Transfer Latest Moonbird NFT</string>
    <string name="deposits_eth_to_arbitrum_bridge">Deposits ETH to Arbitrum Bridge</string>

    <!--TRANSFER USDT FROM BINANCE-->
    <string name="gas_label">Gas: %1$s</string>
    <string name="date_label">Date: %1$s</string>
    <string name="transfer_value">%1$s %2$s</string>

    <!--TRANSFER MOONBIRD NFT-->
    <string name="hash_value">Hash: %1$s</string>
    <string name="confirmations_value">Confirmations: %1$s</string>
    <string name="token_name_value">Token: %1$s</string>

    <!--LIST DEPOSITS ETH ARBITRUM BRIDGE -->
    <string name="value_eth">%1$s ETH</string>
    <string name="transaction_index">Transaction index: %1$s</string>

    <!--CONTENT DESCRIPTION-->
    <string name="cd_icon_ethereum_price_usdt">Icon Ethereum price to usdt</string>
    <string name="cd_icon_ethereum_price_btc">Icon Ethereum price to btc</string>
    <string name="cd_icon_ethereum_total_supply">Icon Ethereum total supply</string>
    <string name="cd_icon_ethereum_total_nodes">Icon Ethereum total nodes</string>
    <string name="cd_icon_transfer">Icon transfer</string>

</resources>