<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/base_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.most4dev.etherscan.presentation.fragments.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_features"
        android:name="com.most4dev.etherscan.presentation.fragments.FeaturesFragment"
        android:label="@string/features"
        tools:layout="@layout/fragment_features">
        <action
            android:id="@+id/action_navigation_features_to_transferUsdtFromBinanceFragment"
            app:destination="@id/transferUsdtFromBinanceFragment" />
        <action
            android:id="@+id/action_navigation_features_to_transferMoonbirdNftFragment"
            app:destination="@id/transferMoonbirdNftFragment" />
        <action
            android:id="@+id/action_navigation_features_to_depositsEthArbitrumBridgeFragment"
            app:destination="@id/depositsEthArbitrumBridgeFragment" />
    </fragment>
    <fragment
        android:id="@+id/transferUsdtFromBinanceFragment"
        android:name="com.most4dev.etherscan.presentation.fragments.TransferUsdtFromBinanceFragment"
        android:label="@string/transfer_usdt_from_binance"
        tools:layout="@layout/fragment_transfer_usdt_from_binance" />
    <fragment
        android:id="@+id/transferMoonbirdNftFragment"
        android:name="com.most4dev.etherscan.presentation.fragments.TransferMoonbirdNftFragment"
        android:label="@string/transfer_moonbird_nft"
        tools:layout="@layout/fragment_transfer_moonbird_nft" />
    <fragment
        android:id="@+id/depositsEthArbitrumBridgeFragment"
        android:name="com.most4dev.etherscan.presentation.fragments.DepositsEthArbitrumBridgeFragment"
        android:label="@string/deposits_eth_to_arbitrum_bridge"
        tools:layout="@layout/fragment_deposits_eth_arbitrum_bridge" />


</navigation>